--- a/scss/wwu2019/general.scss
+++ b/scss/wwu2019/general.scss
@@ -73,8 +73,6 @@ body {
     background-color: var(--wwu-bg);
     color: var(--wwu-fg);
     font-family: 'MetaWebPro', sans-serif;
-    overflow-wrap: break-word;
-    overflow-wrap: anywhere;
 }
 
 a,
